@@ -8,6 +8,7 @@ use Symfony\Component\Finder\Finder;
 use N98\Magento\Command\ConfigurationLoader;
 use N98\Magento\Command\LocalConfig\GenerateCommand as GenerateLocalXmlConfigCommand;
 use N98\Magento\Command\Database\DumpCommand as DatabaseDumpCommand;
+use N98\Magento\Command\Database\DropCommand as DatabaseDropCommand;
 use N98\Magento\Command\Database\InfoCommand as DatabaseInfoCommand;
 use N98\Magento\Command\Database\ConsoleCommand as DatabaseConsoleCommand;
 use N98\Magento\Command\Config\DumpCommand as ConfigPrintCommand;
@@ -27,6 +28,7 @@ use N98\Magento\Command\Admin\User\ListCommand as AdminUserListCommand;
 use N98\Magento\Command\Admin\User\CreateUserCommand as AdminUserCreateCommand;
 use N98\Magento\Command\Admin\DisableNotificationsCommand;
 use N98\Magento\Command\Installer\InstallCommand;
+use N98\Magento\Command\Installer\UninstallCommand;
 use N98\Magento\Command\System\MaintenanceCommand as SystemMaintenanceCommand;
 use N98\Magento\Command\System\InfoCommand as SystemInfoCommand;
 use N98\Magento\Command\System\CheckCommand as SystemCheckCommand;
@@ -79,7 +81,7 @@ class Application extends BaseApplication
     /**
      * @var string
      */
-    const APP_VERSION = '1.39.6';
+    const APP_VERSION = '1.40.0';
 
     /**
      * @var \Composer\Autoload\ClassLoader
@@ -125,6 +127,7 @@ class Application extends BaseApplication
 
         $this->add(new GenerateLocalXmlConfigCommand());
         $this->add(new DatabaseDumpCommand());
+        $this->add(new DatabaseDropCommand());
         $this->add(new DatabaseInfoCommand());
         $this->add(new DatabaseConsoleCommand());
         $this->add(new ConfigPrintCommand());
@@ -144,6 +147,7 @@ class Application extends BaseApplication
         $this->add(new DisableNotificationsCommand());
         $this->add(new DesignDemoNoticeCommand());
         $this->add(new InstallCommand());
+        $this->add(new UninstallCommand());
         $this->add(new SystemMaintenanceCommand());
         $this->add(new SystemInfoCommand());
         $this->add(new SystemCheckCommand());
