@@ -1,1 +1,1 @@
-1.39.6
+1.40.0
