@@ -2,6 +2,8 @@
 - Changed coloring of some command outputs
 - Replaced deleted mageLTS repos with magento-mirror
 - Added Magento 2 installer (experimental)
+- sys:setup:run command now clear cache automatically
+- Removed media/xmlconnect check in sys:check command
 
 Please not that there are some deprecated command prefixes:
 
